--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,9 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
-<%# <a href="/about">About me</a> %>
+
+
+<div class="container">
+    
+<h1>My personal Home page</h1>
+<p>You can read about me , or checkout my blog.</p>
+
 <%= link_to  "About ME", about_path %> 
+</div>
