--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,13 @@
   </head>
 
   <body>
+    <header>
     <%= render 'layouts/navbar' %>
-    <main>
+
+    <%=render 'layouts/alerts' %>
+     <header>
+      <main>
+        
     <%= yield %>
     </main>
   </body>
