--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -3,6 +3,8 @@
     <strong>Title:</strong>
     <%= post.title %>
   </p>
+  <h4>Posted by <%= link_to post.user.name , user_path(post.user) %></h4>
+  <h6><%=pluralize(post.views,"views")%></h6>
 
   <p>
     <strong>Body:</strong>
