--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,8 @@
-
-
 <div class="container">
     
 <h1>My personal Home page</h1>
 <p>You can read about me , or checkout my blog.</p>
 
-<%= link_to  "About ME", about_path %> 
+<%= link_to  "About ME", about_path ,class:"btn btn-secondary" %> 
+<%= link_to  "Blog", posts_path , class:"btn btn-primary" %> 
 </div>
