--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,4 @@
 
-<p style="color: green"><%= notice %></p>
 <div class="container">
 <%= render @post %>
 
@@ -10,3 +9,11 @@
   <%= button_to "Destroy this post", @post, method: :delete %>
 </div>
 </div>
+
+<div class="container">
+  <%= render 'comments/form' , post: @post %>
+  <% @comments.each do |comment| %>
+    <%= render 'comments/comment' , post: @post ,comment: comment%>
+  <%end%>
+
+  </div>
