--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,7 @@
 <p style="color: green"><%= notice %></p>
 
 <h1>Posts</h1>
+<h3> Hi, I'm index action </h3>
 
 <div id="posts">
   <% @posts.each do |post| %>
