--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -15,7 +15,7 @@
         <tr>
           <td><%= link_to post.title, post %></td>
           
-          <td><%= post.body.truncate_words(25) %></td>
+         <td><%= post.body.to_plain_text %></td>
           <td><%= link_to post.user.name, post.user %></td>
         </tr>
       <% end %>
